// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link applies button styles when rendering a button element 1`] = `
.c1 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
}

[data-a11y-link-underlines='true'] .c0[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<button
  className="c0 c1"
/>
`;

exports[`Link passes href down to link element 1`] = `
.c1 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
}

[data-a11y-link-underlines='true'] .c0[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<a
  className="c0 c1"
  href="https://github.com"
/>
`;

exports[`Link respects hoverColor prop 1`] = `
.c1 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
}

[data-a11y-link-underlines='true'] .c0[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
}

.c1:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<a
  className="c0 c1"
/>
`;

exports[`Link respects the  "sx" prop when "muted" prop is also passed 1`] = `
.c1 {
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--fgColor-onEmphasis,var(--color-fg-on-emphasis,#ffffff));
}

[data-a11y-link-underlines='true'] .c0[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
}

.c1:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<a
  className="c0 c1"
  muted={true}
/>
`;

exports[`Link respects the "muted" prop 1`] = `
.c1 {
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  -webkit-text-decoration: none;
  text-decoration: none;
}

[data-a11y-link-underlines='true'] .c0[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
}

.c1:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<a
  className="c0 c1"
  muted={true}
/>
`;
